# server

./: .gitattributes  .gitignore  Bacend.Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
sql_training/: __init__.py  _version.py
sql_training/di/: __init__.py  common.py  rest.py
sql_training/di/config/: config.yml
sql_training/models/: db.py
sql_training/rest/: common.py  run.py
sql_training/rest/auth/: auth_router.py
sql_training/rest/auth/models/: db.py  request.py
sql_training/rest/sql_manager/: sql_manager_router.py
sql_training/rest/sql_manager/models/: __init__.py  db.py
sql_training/utils/: db_helper.py  decorators.py  jwt_helper.py  waiting.py
sql_training/utils/logger/: __init__.py  formatters.py  handlers.py  utils.py
